# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../dlp_permission_service.gni")

group("napi_packages") {
  deps = []
  if (support_jsapi && !ohos_indep_compiler_enable) {
    deps += [
      "${dlp_root_dir}/interfaces/kits/dlp_permission:libdlppermission_napi",
      "${dlp_root_dir}/interfaces/kits/dlp_permission:libdlpsetdlpfeature_napi",
      "${dlp_root_dir}/interfaces/kits/identify_sensitive_content:identifysensitivecontent_napi",
    ]
  }
}
