# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../dlp_permission_service.gni")

ohos_shared_library("libdlp_fuse") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "security"
  part_name = "dlp_permission_service"
  output_name = "libdlp_fuse"

  include_dirs = [
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include/",
    "include",
  ]

  sources = [
    "src/dlp_link_file.cpp",
    "src/dlp_link_manager.cpp",
    "src/fuse_daemon.cpp",
  ]

  configs = [ "${dlp_root_dir}/config:coverage_flags" ]

  deps = [ "${dlp_root_dir}/interfaces/inner_api/dlp_parse:libdlpparse_inner" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "libfuse:libfuse",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DFUSE_USE_VERSION=35",
  ]
}
