# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../dlp_permission_service.gni")

ROOT_DIR = "${dlp_root_dir}/interfaces/inner_api/dlp_parse"

config("dlpparse_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include/",
    "$ROOT_DIR/include",
  ]
}

ohos_shared_library("libdlpparse") {
  sources = [ "$ROOT_DIR/src/dlp_file_kits.cpp" ]

  include_dirs = [
    "$ROOT_DIR/include",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include/",
  ]

  deps = [ "//third_party/openssl:libcrypto_shared" ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
  public_configs = [ ":dlpparse_public_config" ]
  configs = [ "${dlp_root_dir}/config:coverage_flags" ]

  part_name = "dlp_permission_service"
  subsystem_name = "security"
}

ohos_shared_library("libdlpparse_inner") {
  sources = [
    "$ROOT_DIR/src/dlp_crypt.cpp",
    "$ROOT_DIR/src/dlp_file.cpp",
    "$ROOT_DIR/src/dlp_file_kits.cpp",
    "$ROOT_DIR/src/dlp_file_manager.cpp",
  ]

  include_dirs = [
    "$ROOT_DIR/include",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include/",
  ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "os_account:libaccountkits",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
  public_configs = [ ":dlpparse_public_config" ]
  configs = [ "${dlp_root_dir}/config:coverage_flags" ]

  part_name = "dlp_permission_service"
  subsystem_name = "security"

  if (dlp_parse_inner) {
    cflags_cc += [ "-DDLP_PARSE_INNER" ]
    external_deps += [ "os_account:os_account_innerkits" ]
  }

  if (dlp_credential_enable == true &&
      dlp_permission_service_credential_connection_enable == true) {
    cflags_cc += [ "-DSUPPORT_DLP_CREDENTIAL" ]
  }
}
