# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../identify_sensitive_content.gni")

ohos_shared_library("identifysensitivecontent_napi") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${dlp_root_dir}/interfaces/kits/identify_sensitive_content/napi/include",
  ]
  sources = [
    "${dlp_root_dir}/interfaces/kits/identify_sensitive_content/napi/src/",
    "${dlp_root_dir}/interfaces/kits/identify_sensitive_content/napi/src/",
    "${dlp_root_dir}/interfaces/kits/identify_sensitive_content/napi/src/",
  ]

  defines = []
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libtokensetproc_shared",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  if(target_platform == "pc" && data_identify_anonymize_service_enable) {
      defines += [ "FILE_IDENTIFY_ENABLE" ]
      external_deps += [
          "data_identify_anonymize_service:dia_sdk"
      ] 
  }

  relative_install_dir = "module/security"
  subsystem_name = "security"
  part_name = "dlp_permission_service"
}