# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    "cancelretentionstate_fuzzer:CancelRetentionStateFuzzTest",
    "cancelretentionstatestub_fuzzer:CancelRetentionStateStubFuzzTest",
    "generatecert_fuzzer:GenerateCertFuzzTest",
    "generatecertstub_fuzzer:GenerateCertStubFuzzTest",
    "getdlpfilevisitrecord_fuzzer:GetDlpFileVisitRecordFuzzTest",
    "getdlpfilevisitrecordstub_fuzzer:GetDlpFileVisitRecordStubFuzzTest",
    "getdlpgatheringpolicy_fuzzer:GetDlpGatheringPolicyFuzzTest",
    "getdlpgatheringpolicystub_fuzzer:GetDlpGatheringPolicyStubFuzzTest",
    "getdlpsupportfiletype_fuzzer:GetDlpSupportFileTypeFuzzTest",
    "getdlpsupportfiletypestub_fuzzer:GetDlpSupportFileTypeStubFuzzTest",
    "getpolicy_fuzzer:GetPolicyFuzzTest",
    "getpolicystub_fuzzer:GetPolicyStubFuzzTest",
    "getretentionsandboxlist_fuzzer:GetRetentionSandboxListFuzzTest",
    "getretentionsandboxliststub_fuzzer:GetRetentionSandboxListStubFuzzTest",
    "getsandboxexternalauthorization_fuzzer:GetSandboxExternalAuthorizationFuzzTest",
    "getsandboxexternalauthorizationstub_fuzzer:GetSandboxExternalAuthorizationStubFuzzTest",
    "installdlpsandbox_fuzzer:InstallDlpSandboxFuzzTest",
    "installdlpsandboxstub_fuzzer:InstallDlpSandboxStubFuzzTest",
    "isindlpsandbox_fuzzer:IsInDlpSandboxFuzzTest",
    "isindlpsandboxstub_fuzzer:IsInDlpSandboxStubFuzzTest",
    "parsecert_fuzzer:ParseCertFuzzTest",
    "parsecertstub_fuzzer:ParseCertStubFuzzTest",
    "parsedlpheader_fuzzer:ParseDlpHeaderFuzzTest",
    "querydlpfileaccess_fuzzer:QueryDlpFileAccessFuzzTest",
    "querydlpfileaccessstub_fuzzer:QueryDlpFileAccessStubFuzzTest",
    "querydlpfilecopyablebytokenid_fuzzer:QueryDlpFileCopyableByTokenIdFuzzTest",
    "querydlpfilecopyablebytokenidstub_fuzzer:QueryDlpFileCopyableByTokenIdStubFuzzTest",
    "registerdlpsandboxchangecallback_fuzzer:RegisterDlpSandboxChangeCallbackFuzzTest",
    "registerdlpsandboxchangecallbackstub_fuzzer:RegisterDlpSandboxChangeCallbackStubFuzzTest",
    "registeropendlpfilecallback_fuzzer:RegisterOpenDlpFileCallbackFuzzTest",
    "registeropendlpfilecallbackstub_fuzzer:RegisterOpenDlpFileCallbackStubFuzzTest",
    "setpolicy_fuzzer:SetPolicyFuzzTest",
    "setpolicystub_fuzzer:SetPolicyStubFuzzTest",
    "setretentionstate_fuzzer:SetRetentionStateFuzzTest",
    "setretentionstatestub_fuzzer:SetRetentionStateStubFuzzTest",
    "uninstalldlpsandbox_fuzzer:UninstallDlpSandboxFuzzTest",
    "uninstalldlpsandboxstub_fuzzer:UninstallDlpSandboxStubFuzzTest",
    "unregisterdlpsandboxchangecallback_fuzzer:UnRegisterDlpSandboxChangeCallbackFuzzTest",
    "unregisterdlpsandboxchangecallbackstub_fuzzer:UnRegisterDlpSandboxChangeCallbackStubFuzzTest",
    "unregisteropendlpfilecallback_fuzzer:UnRegisterOpenDlpFileCallbackFuzzTest",
    "unregisteropendlpfilecallbackstub_fuzzer:UnRegisterOpenDlpFileCallbackStubFuzzTest",
  ]
}
